@@ -13,8 +13,6 @@ import org.elasticsearch.action.ActionRequest;
 import org.elasticsearch.action.ActionResponse;
 import org.elasticsearch.action.ActionType;
 import org.elasticsearch.action.admin.cluster.snapshots.delete.DeleteSnapshotRequest;
-import org.elasticsearch.action.admin.cluster.snapshots.get.GetSnapshotsRequest;
-import org.elasticsearch.action.admin.cluster.snapshots.get.GetSnapshotsResponse;
 import org.elasticsearch.action.support.master.AcknowledgedResponse;
 import org.elasticsearch.client.internal.Client;
 import org.elasticsearch.cluster.ClusterName;
@@ -26,6 +24,7 @@ import org.elasticsearch.common.settings.ClusterSettings;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.util.set.Sets;
 import org.elasticsearch.core.TimeValue;
+import org.elasticsearch.core.Tuple;
 import org.elasticsearch.snapshots.Snapshot;
 import org.elasticsearch.snapshots.SnapshotId;
 import org.elasticsearch.snapshots.SnapshotInfo;
@@ -42,7 +41,6 @@ import org.elasticsearch.xpack.core.slm.SnapshotLifecycleStats;
 import org.elasticsearch.xpack.core.slm.SnapshotRetentionConfiguration;
 import org.elasticsearch.xpack.slm.history.SnapshotHistoryStore;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
@@ -55,7 +53,6 @@ import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.function.Function;
 import java.util.function.LongSupplier;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
@@ -122,75 +119,6 @@ public class SnapshotRetentionTaskTests extends ESTestCase {
         assertThat(policyMap.get("policyWith"), equalTo(policyWith));
     }
 
-    public void testSnapshotEligibleForDeletion() {
-        final String repoName = "repo";
-        SnapshotLifecyclePolicy policy = new SnapshotLifecyclePolicy(
-            "policy",
-            "snap",
-            "1 * * * * ?",
-            repoName,
-            null,
-            new SnapshotRetentionConfiguration(TimeValue.timeValueDays(30), null, null)
-        );
-        Map<String, SnapshotLifecyclePolicy> policyMap = Collections.singletonMap("policy", policy);
-        Function<SnapshotInfo, Map<String, List<SnapshotInfo>>> mkInfos = i -> Collections.singletonMap(
-            repoName,
-            Collections.singletonList(i)
-        );
-
-        // Test with an ancient snapshot that should be expunged
-        SnapshotInfo info = new SnapshotInfo(
-            new Snapshot(repoName, new SnapshotId("name", "uuid")),
-            Collections.singletonList("index"),
-            Collections.emptyList(),
-            Collections.emptyList(),
-            null,
-            1L,
-            1,
-            Collections.emptyList(),
-            true,
-            Collections.singletonMap("policy", "policy"),
-            0L,
-            Collections.emptyMap()
-        );
-        assertThat(SnapshotRetentionTask.snapshotEligibleForDeletion(info, mkInfos.apply(info), policyMap), equalTo(true));
-
-        // Test with a snapshot that's start date is old enough to be expunged (but the finish date is not)
-        long time = System.currentTimeMillis() - TimeValue.timeValueDays(30).millis() - 1;
-        info = new SnapshotInfo(
-            new Snapshot(repoName, new SnapshotId("name", "uuid")),
-            Collections.singletonList("index"),
-            Collections.emptyList(),
-            Collections.emptyList(),
-            null,
-            time + TimeValue.timeValueDays(4).millis(),
-            1,
-            Collections.emptyList(),
-            true,
-            Collections.singletonMap("policy", "policy"),
-            time,
-            Collections.emptyMap()
-        );
-        assertThat(SnapshotRetentionTask.snapshotEligibleForDeletion(info, mkInfos.apply(info), policyMap), equalTo(true));
-
-        // Test with a fresh snapshot that should not be expunged
-        info = new SnapshotInfo(
-            new Snapshot(repoName, new SnapshotId("name", "uuid")),
-            Collections.singletonList("index"),
-            Collections.emptyList(),
-            Collections.emptyList(),
-            null,
-            System.currentTimeMillis() + 1,
-            1,
-            Collections.emptyList(),
-            true,
-            Collections.singletonMap("policy", "policy"),
-            System.currentTimeMillis(),
-            Collections.emptyMap()
-        );
-        assertThat(SnapshotRetentionTask.snapshotEligibleForDeletion(info, mkInfos.apply(info), policyMap), equalTo(false));
-    }
-
     public void testRetentionTaskSuccess() throws Exception {
         retentionTaskTest(true);
     }
@@ -207,9 +135,9 @@ public class SnapshotRetentionTaskTests extends ESTestCase {
         );
         try (
             ClusterService clusterService = ClusterServiceUtils.createClusterService(threadPool, settings);
-            Client noOpClient = new NoOpClient("slm-test")
+            var clientThreadPool = createThreadPool()
         ) {
-
+            final var noOpClient = new NoOpClient(clientThreadPool);
             final String policyId = "policy";
             final String repoId = "repo";
             SnapshotLifecyclePolicy policy = new SnapshotLifecyclePolicy(
@@ -238,20 +166,6 @@ public class SnapshotRetentionTaskTests extends ESTestCase {
                 0L,
                 Collections.emptyMap()
             );
-            final SnapshotInfo ineligibleSnapshot = new SnapshotInfo(
-                new Snapshot(repoId, new SnapshotId("name2", "uuid2")),
-                Collections.singletonList("index"),
-                Collections.emptyList(),
-                Collections.emptyList(),
-                null,
-                System.currentTimeMillis() + 1,
-                1,
-                Collections.emptyList(),
-                true,
-                Collections.singletonMap("policy", policyId),
-                System.currentTimeMillis(),
-                Collections.emptyMap()
-            );
 
             Set<SnapshotId> deleted = ConcurrentHashMap.newKeySet();
             Set<String> deletedSnapshotsInHistory = ConcurrentHashMap.newKeySet();
@@ -273,11 +187,9 @@ public class SnapshotRetentionTaskTests extends ESTestCase {
                     historyLatch.countDown();
                 }),
                 () -> {
-                    List<SnapshotInfo> snaps = new ArrayList<>(2);
-                    snaps.add(eligibleSnapshot);
-                    snaps.add(ineligibleSnapshot);
-                    logger.info("--> retrieving snapshots [{}]", snaps);
-                    return Collections.singletonMap(repoId, snaps);
+                    final var result = Collections.singletonMap(repoId, List.of(Tuple.tuple(eligibleSnapshot.snapshotId(), policyId)));
+                    logger.info("--> retrieving snapshots [{}]", result);
+                    return result;
                 },
                 (deletionPolicyId, repo, snapId, slmStats, listener) -> {
                     logger.info("--> deleting {} from repo {}", snapId, repo);
@@ -295,7 +207,7 @@ public class SnapshotRetentionTaskTests extends ESTestCase {
             long time = System.currentTimeMillis();
             retentionTask.triggered(new SchedulerEngine.Event(SnapshotRetentionService.SLM_RETENTION_JOB_ID, time, time));
 
-            deletionLatch.await(10, TimeUnit.SECONDS);
+            safeAwait(deletionLatch);
 
             assertThat("something should have been deleted", deleted, not(empty()));
             assertThat("one snapshot should have been deleted", deleted, hasSize(1));
@@ -320,7 +232,9 @@ public class SnapshotRetentionTaskTests extends ESTestCase {
         final String repoId = "repo";
         try (
             ClusterService clusterService = ClusterServiceUtils.createClusterService(threadPool, settings);
-            Client noOpClient = new NoOpClient("slm-test") {
+            var clientThreadPool = createThreadPool()
+        ) {
+            final var noOpClient = new NoOpClient(clientThreadPool) {
 
                 @Override
                 @SuppressWarnings("unchecked")
@@ -329,17 +243,14 @@ public class SnapshotRetentionTaskTests extends ESTestCase {
                     Request request,
                     ActionListener<Response> listener
                 ) {
-                    if (request instanceof GetSnapshotsRequest) {
+                    if (action == TransportSLMGetExpiredSnapshotsAction.INSTANCE) {
                         logger.info("--> called");
-                        listener.onResponse(
-                            (Response) new GetSnapshotsResponse(Collections.emptyList(), Collections.emptyMap(), null, 0, 0)
-                        );
+                        listener.onResponse((Response) new TransportSLMGetExpiredSnapshotsAction.Response(Map.of()));
                     } else {
                         super.doExecute(action, request, listener);
                     }
                 }
-            }
-        ) {
+            };
             SnapshotLifecyclePolicy policy = new SnapshotLifecyclePolicy(
                 policyId,
                 "snap",
@@ -364,18 +275,22 @@ public class SnapshotRetentionTaskTests extends ESTestCase {
             );
 
             AtomicReference<Exception> errHandlerCalled = new AtomicReference<>(null);
-            task.getAllRetainableSnapshots(Collections.singleton(repoId), Collections.singleton(policyId), new ActionListener<>() {
-                @Override
-                public void onResponse(Map<String, List<SnapshotInfo>> stringListMap) {
-                    logger.info("--> forcing failure");
-                    throw new ElasticsearchException("forced failure");
-                }
+            task.getSnapshotsEligibleForDeletion(
+                Collections.singleton(repoId),
+                Map.of(policyId, new SnapshotLifecyclePolicy(policyId, "test", "* * * * *", repoId, null, null)),
+                new ActionListener<>() {
+                    @Override
+                    public void onResponse(Map<String, List<Tuple<SnapshotId, String>>> snapshotsToBeDeleted) {
+                        logger.info("--> forcing failure");
+                        throw new ElasticsearchException("forced failure");
+                    }
 
-                @Override
-                public void onFailure(Exception e) {
-                    errHandlerCalled.set(e);
+                    @Override
+                    public void onFailure(Exception e) {
+                        errHandlerCalled.set(e);
+                    }
                 }
-            });
+            );
 
             assertNotNull(errHandlerCalled.get());
             assertThat(errHandlerCalled.get().getMessage(), equalTo("forced failure"));
@@ -393,8 +308,9 @@ public class SnapshotRetentionTaskTests extends ESTestCase {
         );
         try (
             ClusterService clusterService = ClusterServiceUtils.createClusterService(threadPool, settings);
-            Client noOpClient = new NoOpClient("slm-test") {
-
+            var clientThreadPool = createThreadPool()
+        ) {
+            final var noOpClient = new NoOpClient(clientThreadPool) {
                 @Override
                 @SuppressWarnings("unchecked")
                 protected <Request extends ActionRequest, Response extends ActionResponse> void doExecute(
@@ -409,8 +325,7 @@ public class SnapshotRetentionTaskTests extends ESTestCase {
                         super.doExecute(action, request, listener);
                     }
                 }
-            }
-        ) {
+            };
             final String policyId = "policy";
             final String repoId = "repo";
             SnapshotLifecyclePolicy policy = new SnapshotLifecyclePolicy(
@@ -479,8 +394,9 @@ public class SnapshotRetentionTaskTests extends ESTestCase {
         );
         try (
             ClusterService clusterService = ClusterServiceUtils.createClusterService(threadPool, settings);
-            Client noOpClient = new NoOpClient("slm-test")
+            var clientThreadPool = createThreadPool()
         ) {
+            final var noOpClient = new NoOpClient(clientThreadPool);
             final String policyId = "policy";
             final String repoId = "repo";
             SnapshotLifecyclePolicy policy = new SnapshotLifecyclePolicy(
@@ -535,8 +451,9 @@ public class SnapshotRetentionTaskTests extends ESTestCase {
         );
         try (
             ClusterService clusterService = ClusterServiceUtils.createClusterService(threadPool, settings);
-            Client noOpClient = new NoOpClient("slm-test")
+            var clientThreadPool = createThreadPool()
         ) {
+            final var noOpClient = new NoOpClient(clientThreadPool);
             final String policyId = "policy";
             final String repoId = "repo";
             SnapshotLifecyclePolicy policy = new SnapshotLifecyclePolicy(
@@ -597,14 +514,14 @@ public class SnapshotRetentionTaskTests extends ESTestCase {
     }
 
     private static class MockSnapshotRetentionTask extends SnapshotRetentionTask {
-        private final Supplier<Map<String, List<SnapshotInfo>>> snapshotRetriever;
+        private final Supplier<Map<String, List<Tuple<SnapshotId, String>>>> snapshotRetriever;
         private final DeleteSnapshotMock deleteRunner;
 
         MockSnapshotRetentionTask(
             Client client,
             ClusterService clusterService,
             SnapshotHistoryStore historyStore,
-            Supplier<Map<String, List<SnapshotInfo>>> snapshotRetriever,
+            Supplier<Map<String, List<Tuple<SnapshotId, String>>>> snapshotRetriever,
             DeleteSnapshotMock deleteRunner,
             LongSupplier nanoSupplier
         ) {
@@ -614,10 +531,10 @@ public class SnapshotRetentionTaskTests extends ESTestCase {
         }
 
         @Override
-        void getAllRetainableSnapshots(
+        void getSnapshotsEligibleForDeletion(
             Collection<String> repositories,
-            Set<String> policies,
-            ActionListener<Map<String, List<SnapshotInfo>>> listener
+            Map<String, SnapshotLifecyclePolicy> policies,
+            ActionListener<Map<String, List<Tuple<SnapshotId, String>>>> listener
         ) {
             listener.onResponse(this.snapshotRetriever.get());
         }
